# data-serialization

./: README.md  data-serialization.cabal
src/Data/: Iso.hs  Serialization.hs
src/Data/Serialization/: Codec.hs  Combinators.hs  Combine.hs  Deserialize.hs  Generic.hs  Serializable.hs  Serialize.hs  Wrap.hs
src/Data/Serialization/Text/: AttoParsec.hs  Print.hs  Read.hs  Show.hs
