name:            data-serialization
version:         0.1.0
synopsis:        Serialization library
homepage:        http://github.com/mvoidex/data-serialization
author:          Alexandr `voidex` Ruchkin
license:         BSD3
cabal-version:   >= 1.10
build-type:      Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        attoparsec        == 0.10.*,
        base              >= 4 && < 5,
        bytestring        == 0.9.*,
        mtl               == 2.0.*,
        text              == 0.11.*,
        template-haskell  == 2.7.*
    exposed-modules:
        Data.Iso
        Data.Serialization
        Data.Serialization.Combine
        Data.Serialization.Serialize
        Data.Serialization.Deserialize
        Data.Serialization.Serializable
        Data.Serialization.Combinators
        Data.Serialization.Text.Read
        Data.Serialization.Text.Show
        Data.Serialization.Text.AttoParsec
