name:            data-serialization
version:         0.1.1
synopsis:        Serialization library
homepage:        http://github.com/mvoidex/data-serialization
author:          Alexandr `voidex` Ruchkin
license:         BSD3
cabal-version:   >= 1.10
build-type:      Simple

library
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base              >= 4 && < 6,
        bytestring        == 0.9.*,
        mtl               >= 2.0 && < 2.2,
        text              == 0.11.*,
        template-haskell  == 2.7.*
    exposed-modules:
        Data.Iso
        Data.Serialization
        Data.Serialization.Combine
        Data.Serialization.Serialize
        Data.Serialization.Deserialize
        Data.Serialization.Serializable
        Data.Serialization.Combinators
        Data.Serialization.Text.Read
        Data.Serialization.Text.Show
        Data.Serialization.Text.Print
